--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 	<title>Document</title>
 </head>
 <body>
-<h1>HELLO</h1>
+<div class="box">
+	<div class="container">
+		<div class="box_inner">
+			
+		</div>
+	</div>
+</div>
 </body>
 </html>
