--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link rel="stylesheet" href="css lesson/font-awesome.min.css">
+	<link rel="stylesheet" href="css_items/style.css">
 </head>
 <body>
 <div class="box">
 	<div class="container">
 		<div class="box_inner">
-			
-		</div>
+			<h1 class="title">Team</h1>
+			<div class="line"></div>
+			<p class="text">We are a hard working group, who's aim is to listen to your problems and to come up with the best solution possible. We follow the lates trends on the web to create custom talierd niche website</p>
+	    </div>
 	</div>
 </div>
 </body>
 </html>
+
