--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
 			<div class="line"></div>
 			<p class="text">We are a hard working group, who's aim is to listen to your problems and to come up with the best solution possible. We follow the lates trends on the web to create custom talierd niche website</p>
 	    </div>
+	    <div class="cards">
+	    	<div class="items">
+	    		<img src="img/team1.png" alt="" class="item_img">
+	    		<h2 class="item_title">Name</h2
+	    		<p class="item_text">Lead Developer</p>
+	    		<div class="icons">
+	    			<a href="#"><i class="fa fa-twitter" aria-hidden="true"></a></i>
+                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></a></i>
+                    <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></a></i>
+                    <a href="#"><i class="fa fa-skype" aria-hidden="true"></a></i>
+	    		</div>
+	    	</div>
+	    </div>
 	</div>
 </div>
 </body>
