--- a/index.html
+++ b/index.html
@@ -27,6 +27,39 @@
                     <a href="#"><i class="fa fa-skype" aria-hidden="true"></a></i>
 	    		</div>
 	    	</div>
+	    		    	<div class="items">
+	    		<img src="img/team2.png" alt="" class="item_img">
+	    		<h2 class="item_title">Name</h2
+	    		<p class="item_text">Lead Developer</p>
+	    		<div class="icons">
+	    			<a href="#"><i class="fa fa-twitter" aria-hidden="true"></a></i>
+                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></a></i>
+                    <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></a></i>
+                    <a href="#"><i class="fa fa-skype" aria-hidden="true"></a></i>
+	    		</div>
+	    	</div>
+	    		    	<div class="items">
+	    		<img src="img/team3.png" alt="" class="item_img">
+	    		<h2 class="item_title">Name</h2
+	    		<p class="item_text">Lead Developer</p>
+	    		<div class="icons">
+	    			<a href="#"><i class="fa fa-twitter" aria-hidden="true"></a></i>
+                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></a></i>
+                    <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></a></i>
+                    <a href="#"><i class="fa fa-skype" aria-hidden="true"></a></i>
+	    		</div>
+	    	</div>
+	    		    	<div class="items">
+	    		<img src="img/team4.png" alt="" class="item_img">
+	    		<h2 class="item_title">Name</h2
+	    		<p class="item_text">Lead Developer</p>
+	    		<div class="icons">
+	    			<a href="#"><i class="fa fa-twitter" aria-hidden="true"></a></i>
+                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></a></i>
+                    <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></a></i>
+                    <a href="#"><i class="fa fa-skype" aria-hidden="true"></a></i>
+	    		</div>
+	    	</div>
 	    </div>
 	</div>
 </div>
